Article Item gap fix revert

--- a/frontend/components/ArticlesList/index.module.scss
+++ b/frontend/components/ArticlesList/index.module.scss
@@ -4,10 +4,7 @@
 .articlesList {
   display: flex;
   flex-wrap: wrap;
-
-  @media only screen and (max-width: $tablet) {
-    justify-content: space-between;
-  }
+  justify-content: space-between;
 }
 
 .articleItemPreview {
