--- a/frontend/components/Filters/index.module.scss
+++ b/frontend/components/Filters/index.module.scss
@@ -2,11 +2,11 @@
 @import "../../styles/common";
 
 .filtersSidebar {
-  padding: 40px 40px $gapXL 24px;
+  padding: 40px 40px $gapXL 40px;
   font-size: $size14;
   font-family: $secondaryFont;
   font-weight: 400;
-  width: 274px;
+  width: 290px;
   top: 50px;
   min-height: 95vh;
   position: sticky;
