--- a/frontend/components/SortsSelect/index.module.scss
+++ b/frontend/components/SortsSelect/index.module.scss
@@ -3,7 +3,7 @@
 
 .selectWrapper {
   position: absolute;
-  right:16px;
+  right: 0;
   top: 0;
 
   @media only screen and (max-width: $tablet) {
